# imageHasher

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  generate-tables.sh  generate_eclipse_project.sh  imageHasher.db  jamfile  jamroot  logs.properties
src/: HashUtil.cpp  ImageHasher.cpp  StatsUtil.cpp  exam.cpp  generate-tables.sh  pHashComputeClient.cpp
src/include/: Database.hpp  HashWorker.hpp  ImageFinder.hpp  Progress.hpp  Stats.hpp  StatsUtil.hpp
src/main/: Avahi.cpp  Avahi.hpp  Database.cpp  Database.hpp  HashWorker.cpp  HashWorker.hpp  ImageFinder.cpp  ImageHasher.cpp  NestedTransaction.cpp  NestedTransaction.hpp  PreparedQuery.cpp  PreparedQuery.hpp  Progress.cpp  Stats.cpp  pHashCompute.cpp  pHashCompute.hpp
src/main/msg/: Discovery.cpp  Discovery.hpp
src/main/table/: BadFileRecord-odb.cxx  BadFileRecord-odb.hxx  BadFileRecord-odb.ixx  BadFileRecord.cpp  BadFileRecord.hpp  FilterRecord-odb.cxx  FilterRecord-odb.hxx  FilterRecord-odb.ixx  FilterRecord.cpp  FilterRecord.hpp  Hash-odb.cxx  Hash-odb.hxx  Hash-odb.ixx  Hash.cpp  Hash.hpp  HashJob-odb.cxx  HashJob-odb.hxx  HashJob-odb.ixx  HashJob.cpp  HashJob.hpp  ImageRecord-odb.cxx  ImageRecord-odb.hxx  ImageRecord-odb.ixx  ImageRecord.cpp  ImageRecord.hpp  Phash-odb.cxx  Phash-odb.hxx  Phash-odb.ixx  Phash.cpp  Phash.hpp  Settings-odb.cxx  Settings-odb.hxx  Settings-odb.ixx  Settings.cpp  Settings.hpp  Sha-odb.cxx  Sha-odb.hxx  Sha-odb.ixx  Sha.cpp  Sha.hpp
src/test/: AvahiTest.cpp  DatabaseTest.cpp  HashWorkerTest.cpp  TestAll.cpp  pHashComputeTest.cpp  test_main.cpp
src/test/msg/: DiscoveryTest.cpp
